@@ -20,6 +20,7 @@ Changes in version 1.2.0:
     ecrt_domain_register_pdo_list() and ecrt_domain_register_pdo_range() may
     not be NULL any more.
   - Removed ecrt_slave_pdo_size(). This function was deprecated long before.
+  - Introduced ECRT_VERSION_MAGIC macro and ecrt_version_magic() function.
 * Device interface changes:
   - ec_isr_t was replaced by ec_pollfunc_t, the device driver has to supply
     a poll function to call its ISR. This was introduced because some network
